2009-03-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Locate script components in `$CURDIR' implicitly.

	* x86-mingw32-build.sh (CURDIR): Append to...
	(PATH): ...this, avoiding need for explicit path specification by
	user, so allowing invocation as described in `README'.

2009-02-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Improve efficiency of GCC build; add more comments.

	* x86-mingw32-build.sh: Add miscellaneous comments.
	(GCC_LANGUAGE_SET): Enable all in STAGE 1 configuration.
	(ALL_GCC, INSTALL_GCC): New shell variables; define them; use when...
	[COMPONENT == gcc, STAGE == 1]: ...to facilite once-only configuration
	with all languages selected, while still building only the C compiler;
	reset at end of STAGE 1, to enable remaining languages in STAGE 2.

2009-02-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add diagnostic for invalid DOWNLOAD_HOST.

	* x86-mingw32-build.sh.mirrors: Emit diagnostic message, in
	`unattended' build mode, when `$DOWNLOAD_HOST' does not specify a
	valid mirror, and downloads are enabled.

2009-02-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add support for new MinGW.org package naming conventions.

	* x86-mingw32-build.sh (MINGWRT): New shell variable; define it
	as the requisite package base name for `mingw-runtime' or `mingwrt',
	which is determined by new `tarname' function; use it to resolve all
	subsequent references to the `mingw-runtime' package.
	(COMPONENT) [mingw-runtime]: Make it match `$MINGWRT'; build it for
	whatever package base name that may be specified thereby.
	(LEAN_BUILD) [isyes]: Purge all plausible `$MINGWRT' aliases.
	(TARGET_OS): New shell variable; define it.
	(TARGET): Use it.

	* x86-mingw32-build.sh.functions (tarname): New function; it
	identifies possible alternative source package names, including the
	`mingwrt' vs. `mingw-runtime' distinction, and names qualified by
	`$TARGET_OS' preceding the `src' suffix.